--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -16,7 +16,6 @@
     height: 210px;
 }
 .register{
-    background-image: url(../img/site/banner3.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -45,7 +44,6 @@
 }
 
 .get-a-quote{
-   background-image: url(../img/site/home-budget.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -133,10 +131,7 @@ body{
 }
 
 .get-a-quote-2{
-    background: url('../img/6.jpg');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+    
 }
 .radio2{
     min-height: 0!important;
@@ -187,7 +182,7 @@ input[type=checkbox], input[type=radio] {
     line-height: normal;
 }
 .logo{
-    max-width: 100px;
+    max-width: 140px;
     position: absolute;
     top: 0;
     left: 0;
@@ -201,6 +196,12 @@ nav.navbar.bootsnav {
 #navbar-menu{
     overflow-x: hidden!important;
 }
+.contact-area .address-items li span {
+    padding-left: 15px;
+    font-size: 18px;
+    padding-top: 16px;
+}
+
 
 @media (max-width: 1023px){
     nav.navbar.bootsnav .navbar-toggle {
